--- a/attractions.html
+++ b/attractions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domki na Mazurach</title>
+    <title>Domki na Mazurach | Atrakcje w okolicy</title>
     <meta name="description"
         content="Domki wypoczynkowe na Mazurach nad Jeziorem Dejnowo. Miejsce dla tych, którzy chcą odpocząć wśród jezior, lasów i tęsknią za czystym powietrzem.
 Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pieszych wędrówek, jazdy na rowerze, wędkarstwa i kajakarstwa.">
@@ -27,9 +27,9 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
             </div>
 
             <ul class=" navbar__menu">
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link page-active">Home</a></li>
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Atrakcje w okolicy</a></li>
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Kontakt</a></li>
+                <li class="navbar__menu-item"><a href="index.html" class="navbar__menu-link">Home</a></li>
+                <li class="navbar__menu-item"><a href="attractions.html" class="navbar__menu-link page-active">Atrakcje w okolicy</a></li>
+                <li class="navbar__menu-item"><a href="contact.html" class="navbar__menu-link">Kontakt</a></li>
             </ul>
             <!-- Start mobile menu -->
             <button class="mobile-menu__open-btn" data-mobile-menu--open>
@@ -65,7 +65,7 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
     </nav>
     <header class="header section--light">
         <div class="section__wrapper">
-            <h1 class="header__title">Twoja ucieczka od miejskiego życia</h1>
+            <h1 class="header__title">Atrakcje w okolicy</h1>
             <picture>
                 <source srcset="
                 ./images/tree-with-a-white-background-desktop.png 1x,
@@ -76,93 +76,16 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
                     ./images/tree-with-a-white-background-mobile@2x.png 2x" media="(min-width: 280px)" />
                 <img class="header__image" src="./images/tree-with-a-white-background-mobile.png" alt="green tree" />
             </picture>
-            <p class="header__text">Wypoczynek, relaks, spokój</p>
-            <a class="header__link" href="#">Zarezerwuj już teraz</a>
         </div>
     </header>
     <main>
-        <section class="about section--dark">
-            <div class="about--wrapper section__wrapper">
-                <div class="about__img--wrapper">
-                    <picture>
-                        <source srcset="
-                                        ./images/domek_mobile.jpg 1x, 
-                                        ./images/domek_mobile@2x.jpg 2x" media="(min-width: 200px)" />
-                        <img class="about__img" src="./images/./images/domek_mobile.jpg"
-                            alt="Zdjęcie domków do wynajęcia" />
-                    </picture>
-                </div>
-                <div class="about__text--wrapper">
-                    <h2 class="about__tittle about__text">Domki wypoczynkowe na Mazurach nad Jeziorem Dejnowo</h2>
-                    <p class="about__text about__paragraph">Miejsce dla tych, którzy chcą odpocząć wśród jezior, lasów i
-                        tęsknią za czystym
-                        powietrzem.</p>
-                    <p class="about__text about__paragraph">Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy,
-                        miłośników pieszych
-                        wędrówek, jazdy na
-                        rowerze, wędkarstwa i
-                        kajakarstwa.</p>
-                </div>
-            </div>
-        </section>
-        <section class="offer section--light">
-            <div class="section__wrapper">
-                <div class="offer__description">
-                    <p class="offer__text">
-                        <strong class="text-key--first">Całoroczne domki</strong> położone są w wiosce
-                        <strong class="text-key--second">Pilec</strong> na <strong
-                            class="text-key--second">Mazurach</strong>, w odległości 18 km od Mrągowa i
-                        2,9 km od Świętej Lipki, 2
-                        minuty spacerem od plaży.
-                    </p>
-
-                    <p class="offer__text">Pilec to wieś w Polsce położona w województwie warmińsko-mazurskim, w
-                        powiecie kętrzyńskim, w gminie Reszel.
-                        Przez Pilec przepływa rzeka Dajna, którą biegnie szlak kajakowy Mrągowo – Święta Lipka.
-                        W północnej części wsi znajduje się jezioro Dejnowa, rozciągające się aż do Świętej Lipki.</p>
-
-                    <p class="offer__text">75 km od obiektu znajduje się najbliższy Port Lotniczy Olsztyn-Mazury.
-                    </p>
-                    <p class="offer__text">W każdym z dwóch domków znajdują się <strong class="text-key--second">dwa
-                            oddzielne pokoje</strong> na piętrze, a na parterze
-                        <strong class="text-key--second">salon</strong> z częścią wypoczynkową -
-                        rozkładaną sofą, telewizorem, a także <strong class="text-key--second">aneks</strong>,
-                        wyposażony w lodówkę oraz wszystkie przybory kuchenne, czajnik, kuchenkę
-                        elektryczną. W każdym domku prywatna łazienka z prysznicem.
-
-                    <p class="offer__text"><strong class="text-key--second">Domek przeznaczony dla 5
-                            osób.</strong></p>
-
-                    <p class="offer__text">Cena domku za dobę przy pobycie <strong class="text-key--second">do 7
-                            dni</strong>: 450 zł, a <strong class="text-key--second">powyżej 7 dni</strong>: 400
-                        zł.</p>
-                    </p>
-                </div>
-                <h3 class="offer__heading">Do dyspozycji gości:</h3>
-                <ul class="offer__list">
-                    <li class="offer__list-item"><strong class="text-key--second">szeroka prywatna plaża</strong>
-                        znajdująca się jedyne 150m od domków,</li>
-                    <li class="offer__list-item"><strong class="text-key--second">pomost</strong> przy plaży,</li>
-                    <li class="offer__list-item"><strong class="text-key--second">rowery wodne,</strong></li>
-                    <li class="offer__list-item"><strong class="text-key--second">kajaki</strong> - dla wytrwałych
-                        kajakarzy spływ na południe do Mrągowa,</li>
-                    <li class="offer__list-item"><strong class="text-key--second">plac zabaw</strong> dla dzieci (domek
-                        ze zjeżdżalnią, trampolina, huśtawki, ścianka wspinaczkowa),</li>
-                    <li class="offer__list-item">miejsce na ognisko/ grilla</li>
-                    <li class="offer__list-item">pościel (ręczniki we własnym zakresie),</li>
-                    <li class="offer__list-item">prywatny parking,</li>
-                </ul>
+        <section class="attraction section--light">
+            <div class="section__wrapper">               
                 <div class="offer__link--wrapper">
                     <a class="header__link" href="#">Zarezerwuj już teraz</a>
                 </div>
             </div>
 
-        </section>
-        <section class="attractions section--dark">
-            <div class="section__wrapper">
-                <h2 class="attractions__heading">Atrakcje w okolicy</h2>
-                <a href="#" class="attractions__link">Czytaj więcej</a>
-            </div>
         </section>
         <section class="gallery section--light">
             <div class="section__wrapper">
@@ -244,9 +167,9 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
                 </div>
 
                 <ul class="menu">
-                    <li class="menu__item"><a href="#" class="menu__link page-active">Home</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Atrakcje w okolicy</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Kontakt</a></li>
+                    <li class="menu__item"><a href="index.html" class="menu__link page-active">Home</a></li>
+                    <li class="menu__item"><a href="attractions.html" class="menu__link page-active">Atrakcje w okolicy</a></li>
+                    <li class="menu__item"><a href="contact.html" class="menu__link">Kontakt</a></li>
                 </ul>
             </div>
             <div class="footer__down--wrapper">
