--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
             </div>
 
             <ul class=" navbar__menu">
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link page-active">Home</a></li>
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Atrakcje w okolicy</a></li>
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Kontakt</a></li>
+                <li class="navbar__menu-item"><a href="index.html" class="navbar__menu-link page-active">Home</a></li>
+                <li class="navbar__menu-item"><a href="attractions.html" class="navbar__menu-link">Atrakcje w okolicy</a></li>
+                <li class="navbar__menu-item"><a href="contact.html" class="navbar__menu-link">Kontakt</a></li>
             </ul>
             <!-- Start mobile menu -->
             <button class="mobile-menu__open-btn" data-mobile-menu--open>
@@ -244,9 +244,9 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
                 </div>
 
                 <ul class="menu">
-                    <li class="menu__item"><a href="#" class="menu__link page-active">Home</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Atrakcje w okolicy</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Kontakt</a></li>
+                    <li class="menu__item"><a href="index.html" class="menu__link page-active">Home</a></li>
+                    <li class="menu__item"><a href="attractions.html" class="menu__link">Atrakcje w okolicy</a></li>
+                    <li class="menu__item"><a href="contact.html" class="menu__link">Kontakt</a></li>
                 </ul>
             </div>
             <div class="footer__down--wrapper">
