--- a/attractions.html
+++ b/attractions.html
@@ -28,7 +28,8 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
 
             <ul class=" navbar__menu">
                 <li class="navbar__menu-item"><a href="index.html" class="navbar__menu-link">Home</a></li>
-                <li class="navbar__menu-item"><a href="attractions.html" class="navbar__menu-link page-active">Atrakcje w okolicy</a></li>
+                <li class="navbar__menu-item"><a href="attractions.html" class="navbar__menu-link page-active">Atrakcje
+                        w okolicy</a></li>
                 <li class="navbar__menu-item"><a href="contact.html" class="navbar__menu-link">Kontakt</a></li>
             </ul>
             <!-- Start mobile menu -->
@@ -80,14 +81,93 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
     </header>
     <main>
         <section class="attraction section--light">
-            <div class="section__wrapper">               
-                <div class="offer__link--wrapper">
-                    <a class="header__link" href="#">Zarezerwuj już teraz</a>
-                </div>
+            <div class="section__wrapper">
+                <p class="attraction__introduction">Poniżej przedstawiamy tylko niektóre z bardzo wielu atrakcji w
+                    okolicy.</p>
+                <ul class="attraction__list">
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Mrągowo
+                        </span>- miejscowość znana z corocznego Pikniku Country i Folk, Festiwalu Kultury Kresowej czy
+                        przezabawnej Mazurskiej Nocy Kabaretowej, Musicalu „Pora jeziora”, Mazurskiej Nocy Rozrywki,
+                        Mrągowskiego Festiwalu
+                        Komedii czy Gali Fight Exclusive Night. W miejscowości głównymi atrakcjami są miasteczko Country
+                        Mrongoville, muzea oraz słynny amfiteatr nad jeziorem. Wśród istotnych zabytków miasta trzeba
+                        wyróżnić:
+                        Ratusz miejski z I połowy XIX w., Strażnicę Bośniacką z XVIII w., Cerkiew prawosławną z 1895 r.,
+                        powstała początkowo jako bożnica żydowska, Starą Chatę - żydowskie zakłady szewskie i
+                        krawieckie, Kamienice w centrum miasta Mrągowo, najstarszą aptekę w województwie, czyli Apteka
+                        "Pod Orłem" z 1829 r., Góra 4 Wiatrów.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Święta Lipka
+                        </span>
+                        - dawna pruska osada, położona nad niewielką rzeką, łączącą jeziora Wirów oraz Dejnowo. Znana z
+                        przepięknej Bazyliki w której są barokowe organy z czterema tysiącami piszczałek.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Reszel
+                        </span>
+                        - to urokliwe miasteczko leżące w granicach historycznej krainy Warmii, które bez większej
+                        przesady nazywane jest perlą regionu. Najbardziej znane atrakcje Reszla to: zamek biskupów
+                        warmińskich, gotycki kościół Świętych Apostołów Piotra i Pawła oraz gotyckie mosty.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Pałac w Drogoszach
+                        </span>
+                        - monumentalny, barokowy dwór wraz z rozległym parkiem połączonym ze
+                        sztucznie skomponowanym
+                        otaczającym krajobrazem, a także reliktami budowli gospodarczych.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Zamek krzyżacki
+                        </span>
+                        w Kętrzynie w stylu gotyckim.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Wilczy Szaniec
+                        </span>
+                        - dawna siedziba główna przywódcy III Rzeszy.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Pałac w Sorkwitach
+                        </span>
+                        - powstały w latach 1850 – 1856 w stylu angielskiego neogotyku. Pałac, podobny do dwupiętrowego
+                        zamku z czerwonej cegły.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Mamerki
+                        </span>
+                        - kwatera dowództwa Wehrmachtu.
+                    </li>
+                    <li class="attraction__item">
+                        <span class="attraction__title">
+                            Zespół Pałacowo - Parkowy oraz Stacja Badawczo - Dydaktyczna w Łężanach
+                        </span>
+                        - wybudowany w latach 1909-1911. Kręcono w nim fim "Kamerdyner" Filipa Bajona.
+                    </li>
+                </ul>
+
+
             </div>
 
         </section>
-        <section class="gallery section--light">
+        <section class="offer-link section--light">
+            <div class="section__wrapper">
+
+                <div class="offer__link--wrapper">
+                    <a class="header__link" href="contact.html">Zarezerwuj już teraz</a>
+                </div>
+            </div>
+        </section>
+        <section class="gallery section--light gallery-in-attraction">
             <div class="section__wrapper">
                 <h2 class="gallery__heading">Galeria</h2>
                 <div class="gallery__slider sliders">
@@ -167,8 +247,9 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
                 </div>
 
                 <ul class="menu">
-                    <li class="menu__item"><a href="index.html" class="menu__link page-active">Home</a></li>
-                    <li class="menu__item"><a href="attractions.html" class="menu__link page-active">Atrakcje w okolicy</a></li>
+                    <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
+                    <li class="menu__item"><a href="attractions.html" class="menu__link page-active">Atrakcje w
+                            okolicy</a></li>
                     <li class="menu__item"><a href="contact.html" class="menu__link">Kontakt</a></li>
                 </ul>
             </div>
