--- a/contact.html
+++ b/contact.html
@@ -63,172 +63,28 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
             <!-- End mobile menu -->
         </div>
     </nav>
-    <header class="header section--light">
-        <div class="section__wrapper">
-            <h1 class="header__title">Twoja ucieczka od miejskiego życia</h1>
-            <picture>
-                <source srcset="
-                ./images/tree-with-a-white-background-desktop.png 1x,
-                ./images/tree-with-a-white-background-desktop@2x.png 2x,
-                      " media="(min-width: 768px)" />
-                <source srcset="
-                    ./images/tree-with-a-white-background-mobile.png 1x, 
-                    ./images/tree-with-a-white-background-mobile@2x.png 2x" media="(min-width: 280px)" />
-                <img class="header__image" src="./images/tree-with-a-white-background-mobile.png" alt="green tree" />
-            </picture>
-            <p class="header__text">Wypoczynek, relaks, spokój</p>
-            <a class="header__link" href="#">Zarezerwuj już teraz</a>
-        </div>
-    </header>
     <main>
-        <section class="about section--dark">
-            <div class="about--wrapper section__wrapper">
-                <div class="about__img--wrapper">
-                    <picture>
-                        <source srcset="
-                                        ./images/domek_mobile.jpg 1x, 
-                                        ./images/domek_mobile@2x.jpg 2x" media="(min-width: 200px)" />
-                        <img class="about__img" src="./images/./images/domek_mobile.jpg"
-                            alt="Zdjęcie domków do wynajęcia" />
-                    </picture>
-                </div>
-                <div class="about__text--wrapper">
-                    <h2 class="about__tittle about__text">Domki wypoczynkowe na Mazurach nad Jeziorem Dejnowo</h2>
-                    <p class="about__text about__paragraph">Miejsce dla tych, którzy chcą odpocząć wśród jezior, lasów i
-                        tęsknią za czystym
-                        powietrzem.</p>
-                    <p class="about__text about__paragraph">Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy,
-                        miłośników pieszych
-                        wędrówek, jazdy na
-                        rowerze, wędkarstwa i
-                        kajakarstwa.</p>
+        <section class="contact section--light">
+            <div class="section__wrapper">
+                <div class="contact__text--wrapper">
+                    <h2 class="contact__tittle contact__text">Kontakt</h2>
+                    <p class="contact__text contact__paragraph">W celu rezerwacji domku</p>
+                    <a class="contact__tel" href="+48516779 785">+48 516 779 785</a>
                 </div>
             </div>
         </section>
-        <section class="offer section--light">
+        <section class="location section--light">
             <div class="section__wrapper">
-                <div class="offer__description">
-                    <p class="offer__text">
-                        <strong class="text-key--first">Całoroczne domki</strong> położone są w wiosce
-                        <strong class="text-key--second">Pilec</strong> na <strong
-                            class="text-key--second">Mazurach</strong>, w odległości 18 km od Mrągowa i
-                        2,9 km od Świętej Lipki, 2
-                        minuty spacerem od plaży.
-                    </p>
+                <div class="location__text--wrapper">
+                    <h2 class="location__tittle location__text">Lokalizacja</h2>
+                    <div class="location__address--wrapper">
 
-                    <p class="offer__text">Pilec to wieś w Polsce położona w województwie warmińsko-mazurskim, w
-                        powiecie kętrzyńskim, w gminie Reszel.
-                        Przez Pilec przepływa rzeka Dajna, którą biegnie szlak kajakowy Mrągowo – Święta Lipka.
-                        W północnej części wsi znajduje się jezioro Dejnowa, rozciągające się aż do Świętej Lipki.</p>
-
-                    <p class="offer__text">75 km od obiektu znajduje się najbliższy Port Lotniczy Olsztyn-Mazury.
-                    </p>
-                    <p class="offer__text">W każdym z dwóch domków znajdują się <strong class="text-key--second">dwa
-                            oddzielne pokoje</strong> na piętrze, a na parterze
-                        <strong class="text-key--second">salon</strong> z częścią wypoczynkową -
-                        rozkładaną sofą, telewizorem, a także <strong class="text-key--second">aneks</strong>,
-                        wyposażony w lodówkę oraz wszystkie przybory kuchenne, czajnik, kuchenkę
-                        elektryczną. W każdym domku prywatna łazienka z prysznicem.
-
-                    <p class="offer__text"><strong class="text-key--second">Domek przeznaczony dla 5
-                            osób.</strong></p>
-
-                    <p class="offer__text">Cena domku za dobę przy pobycie <strong class="text-key--second">do 7
-                            dni</strong>: 450 zł, a <strong class="text-key--second">powyżej 7 dni</strong>: 400
-                        zł.</p>
-                    </p>
+                        <p class="location__text location__address">Pilec 59</p>
+                        <p class="location__text location__address">11-440 Reszel</p>
+                    </div>
+                    <button class="location__btn">Wyznacz trasę</button>
                 </div>
-                <h3 class="offer__heading">Do dyspozycji gości:</h3>
-                <ul class="offer__list">
-                    <li class="offer__list-item"><strong class="text-key--second">szeroka prywatna plaża</strong>
-                        znajdująca się jedyne 150m od domków,</li>
-                    <li class="offer__list-item"><strong class="text-key--second">pomost</strong> przy plaży,</li>
-                    <li class="offer__list-item"><strong class="text-key--second">rowery wodne,</strong></li>
-                    <li class="offer__list-item"><strong class="text-key--second">kajaki</strong> - dla wytrwałych
-                        kajakarzy spływ na południe do Mrągowa,</li>
-                    <li class="offer__list-item"><strong class="text-key--second">plac zabaw</strong> dla dzieci (domek
-                        ze zjeżdżalnią, trampolina, huśtawki, ścianka wspinaczkowa),</li>
-                    <li class="offer__list-item">miejsce na ognisko/ grilla</li>
-                    <li class="offer__list-item">pościel (ręczniki we własnym zakresie),</li>
-                    <li class="offer__list-item">prywatny parking,</li>
-                </ul>
-                <div class="offer__link--wrapper">
-                    <a class="header__link" href="#">Zarezerwuj już teraz</a>
-                </div>
-            </div>
-
-        </section>
-        <section class="attractions section--dark">
-            <div class="section__wrapper">
-                <h2 class="attractions__heading">Atrakcje w okolicy</h2>
-                <a href="#" class="attractions__link">Czytaj więcej</a>
-            </div>
-        </section>
-        <section class="gallery section--light">
-            <div class="section__wrapper">
-                <h2 class="gallery__heading">Galeria</h2>
-                <div class="gallery__slider sliders">
-                    <div class="gallery__img--wrapper horizontal-img">
-                        <picture>
-                            <source srcset="
-                                                            ./images/gallery/img1.jpg 1x,  
-                                                            ./images/gallery/img1@2x.jpg 2x"
-                                media="(min-width: 200px)" />
-                            <img class="gallery__img 
-" src="./images/gallery/img1.jpg" alt="Zdjęcie z galeri zdjęć domków" />
-                        </picture>
-                    </div>
-                    <div class="gallery__img--wrapper">
-                        <picture>
-                            <source srcset="
-                                                            ./images/gallery/img2.jpg 1x,  
-                                                            ./images/gallery/img2@2x.jpg 2x"
-                                media="(min-width: 200px)" />
-                            <img class="gallery__img" src="./images/gallery/img2.jpg"
-                                alt="Zdjęcie z galeri zdjęć domków" />
-                        </picture>
-                    </div>
-                    <div class="gallery__img--wrapper horizontal-img">
-                        <picture>
-                            <source srcset="
-                                                            ./images/gallery/img3.jpg 1x,  
-                                                            ./images/gallery/img3@2x.jpg 2x"
-                                media="(min-width: 200px)" />
-                            <img class="gallery__img" src="./images/gallery/img3.jpg"
-                                alt="Zdjęcie z galeri zdjęć domków" />
-                        </picture>
-                    </div>
-                    <div class="gallery__img--wrapper horizontal-img">
-                        <picture>
-                            <source srcset="
-                                                                                ./images/gallery/img1.jpg 1x,  
-                                                                                ./images/gallery/img1@2x.jpg 2x"
-                                media="(min-width: 200px)" />
-                            <img class="gallery__img 
-                    " src="./images/gallery/img1.jpg" alt="Zdjęcie z galeri zdjęć domków" />
-                        </picture>
-                    </div>
-                    <div class="gallery__img--wrapper">
-                        <picture>
-                            <source srcset="
-                                                                                ./images/gallery/img2.jpg 1x,  
-                                                                                ./images/gallery/img2@2x.jpg 2x"
-                                media="(min-width: 200px)" />
-                            <img class="gallery__img" src="./images/gallery/img2.jpg"
-                                alt="Zdjęcie z galeri zdjęć domków" />
-                        </picture>
-                    </div>
-                    <div class="gallery__img--wrapper horizontal-img">
-                        <picture>
-                            <source srcset="
-                                                                                ./images/gallery/img3.jpg 1x,  
-                                                                                ./images/gallery/img3@2x.jpg 2x"
-                                media="(min-width: 200px)" />
-                            <img class="gallery__img" src="./images/gallery/img3.jpg"
-                                alt="Zdjęcie z galeri zdjęć domków" />
-                        </picture>
-                    </div>
-                </div>
+                <div class="location__img--wrapper"></div>
             </div>
         </section>
     </main>
