--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
             </div>
 
             <ul class=" navbar__menu">
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link page-active">Home</a></li>
+                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link ">Home</a></li>
                 <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Atrakcje w okolicy</a></li>
-                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Kontakt</a></li>
+                <li class="navbar__menu-item"><a href="#" class="navbar__menu-link page-active">Kontakt</a></li>
             </ul>
             <!-- Start mobile menu -->
             <button class="mobile-menu__open-btn" data-mobile-menu--open>
@@ -47,13 +47,13 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
                         </button>
                         <ul class="mobile-menu__list">
                             <li class="mobile-menu__item">
-                                <a class="mobile-menu__link mobile-menu__link--active" href="#">Home</a>
+                                <a class="mobile-menu__link mobile-menu__link--active" href="index.html">Home</a>
                             </li>
                             <li class="mobile-menu__item">
-                                <a class="mobile-menu__link" href="#">Atrakcje w okolicy</a>
+                                <a class="mobile-menu__link" href="attractions.html">Atrakcje w okolicy</a>
                             </li>
                             <li class="mobile-menu__item">
-                                <a class="mobile-menu__link" href="#">Kontakt</a>
+                                <a class="mobile-menu__link" href="contact.html">Kontakt</a>
                             </li>
 
                         </ul>
@@ -100,9 +100,9 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
                 </div>
 
                 <ul class="menu">
-                    <li class="menu__item"><a href="#" class="menu__link page-active">Home</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">Atrakcje w okolicy</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Kontakt</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link page-active">Kontakt</a></li>
                 </ul>
             </div>
             <div class="footer__down--wrapper">
