--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ Idealne dla rodzin z dziećmi, przyjaciół, par, grzybiarzy, miłośników pies
                         </button>
                         <ul class="mobile-menu__list">
                             <li class="mobile-menu__item">
-                                <a class="mobile-menu__link mobile-menu__link--active" href="#">Home</a>
+                                <a class="mobile-menu__link mobile-menu__link--active" href="index.html">Home</a>
                             </li>
                             <li class="mobile-menu__item">
-                                <a class="mobile-menu__link" href="#">Atrakcje w okolicy</a>
+                                <a class="mobile-menu__link" href="attractions.html">Atrakcje w okolicy</a>
                             </li>
                             <li class="mobile-menu__item">
-                                <a class="mobile-menu__link" href="#">Kontakt</a>
+                                <a class="mobile-menu__link" href="contact.html">Kontakt</a>
                             </li>
 
                         </ul>
